--- a/Fundraising/wwwroot/ProductPage/mymainpage.html
+++ b/Fundraising/wwwroot/ProductPage/mymainpage.html
@@ -158,6 +158,16 @@
             padding: 10px 5px;
             width: 150px;
         }
+
+        .selectphotodiv {
+            height: 200px;
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: 50%;
+            background-position: center;
+            padding-bottom: 56.25%;
+            position: relative;
+        }
     </style>
 
 </head>
@@ -195,10 +205,13 @@
                         </div>
 
                         <!-- 資訊卡 -->
-                        <div class="selectedimgdiv">
-                            <!--<img class="selectedimg" src="./page.png" alt="">-->
-                            <img class="selectedimg" :src="item.coverphoto" alt="">
+                        <div class="selectphotodiv" :style="{'background-image':'url(' + item.coverphoto + ')'}">
                         </div>
+
+                        <!--<div class="selectedimgdiv">-->
+                            <!--<img class="selectedimg" :src="item.coverphoto" alt="">
+                        </div>-->
+
                         <p></p>
                         <h3 class="fs-5" style="height: 70px">{{item.productTitle}}</h3>
                         <div class="d-flex justify-content-between">
