--- a/Fundraising/wwwroot/CMS/PdetailsEdit.html
+++ b/Fundraising/wwwroot/CMS/PdetailsEdit.html
@@ -365,7 +365,7 @@
                             axios.put(`/api/back/Products/${this.productinfo.productId}`, putproduct)
                                 .then(response => console.log(response));
                             alert("提案審核已確認");
-                            window.location = "./Plist.html"
+                            window.location = "./Preview.html"
                         })
                 }
             },
