--- a/Fundraising/wwwroot/ProductPage/filter.html
+++ b/Fundraising/wwwroot/ProductPage/filter.html
@@ -103,8 +103,8 @@
                 <select onchange="filterchiose(this)" style="box-shadow: none;" class="form-select" aria-label="Default select example">
                     <option id="op1" value="1">熱門</option>
                     <option id="op2" value="2">最新</option>
-                    <option value="3">募資金額</option>
-                    <option value="4">募資人數</option>
+                    <option id="op3" value="3">募資金額</option>
+                    <option id="op4" value="4">募資人數</option>
                 </select>
             </div>
             <!--篩選-->
@@ -332,6 +332,7 @@
                     url: '/api/Fundraising/tolpage',
                     success: function (e) {
                         app.tolpage = parseInt(e);
+                        console.log(999)
                     }
                 })
                 var apitopage = (sessionStorage.getItem("topage") == null) ? 0 : sessionStorage.getItem("topage")
