--- a/Fundraising/wwwroot/ProductPage/mymainpage.html
+++ b/Fundraising/wwwroot/ProductPage/mymainpage.html
@@ -170,7 +170,7 @@
         }
         
         .container h2{
-            border-bottom: 4px solid #047c51;
+            border-bottom: 3px solid #09b478;
         }
     </style>
 
