--- a/Fundraising/wwwroot/Proposal/test4.html
+++ b/Fundraising/wwwroot/Proposal/test4.html
@@ -79,7 +79,7 @@
 </ol>
 
 <p>★【重要須知】★</p>
-
+<a href=""></a>
 <ol>
 	<li>因拍攝關係，產品照片與實品顏色可能略有差異，實際以廠商出貨為主。</li>
 	<li>請於收到商品立即檢查，若遇拼圖需補片情形，請於【收到商品後七天內】提出。</li>
