--- a/Fundraising/wwwroot/CMS/PdetailsView.html
+++ b/Fundraising/wwwroot/CMS/PdetailsView.html
@@ -142,7 +142,7 @@
                                                         <br>
                                                         <label for="">銀行帳戶:</label> <br>
                                                         <input type="text" class="w-100"
-                                                            :value="productinfo.principalId" disabled>
+                                                            :value="productinfo.principalBankAccount" disabled>
                                                     </div>
                                                     <div class="col-4 px-4">
                                                         <label for="">聯絡信箱:</label> <br>
