--- a/Fundraising/wwwroot/CMS/index.html
+++ b/Fundraising/wwwroot/CMS/index.html
@@ -154,7 +154,7 @@
                                                         <th>目前金額</th>
                                                         <th class="col-2">目前進度</th>
                                                         <th class="col-2">贊助人數</th>
-                                                        <th>操作</th>
+                                                        <th class="col-2">操作</th>
                                                     </tr>
                                                 </thead>
                                                 <div>
@@ -257,7 +257,7 @@
                     </div>
                     <div class="modal-body px-3">
                         <div class="row  justify-content-center mb-3">
-                            <div class="col-5">1</div>
+                            <div class="col-5 "><img :src="userinfo.userPhoto" style="width: 200px;height: 200px;object-fit: cover;" alt=""></div>
                             <div class="col-6 ">
                                 <div class="">
                                     <label for="">會員編號:</label><br>
