--- a/Fundraising/wwwroot/CMS/Plist.html
+++ b/Fundraising/wwwroot/CMS/Plist.html
@@ -81,6 +81,7 @@
                                                             v-model="input.productStateId">
                                                             <option value="全部">全部</option>
                                                             <option value="審核中">審核中</option>
+                                                            <option value="審核不通過">審核不通過</option>
                                                             <option value="募資中">募資中</option>
                                                             <option value="募資失敗">募資失敗</option>
                                                             <option value="募資成功">募資成功</option>
