--- a/Fundraising/wwwroot/ProductPage/filter.html
+++ b/Fundraising/wwwroot/ProductPage/filter.html
@@ -77,6 +77,16 @@
             width: 100% !important;
             height: auto !important;
         }
+
+        .selectphotodiv {
+            height: 200px;
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: 50%;
+            background-position: center;
+            padding-bottom: 56.25%;
+            position: relative;
+        }
     </style>
 
 </head>
@@ -119,9 +129,11 @@
                         </div>
 
                         <!--資訊卡-->
-                        <div class="selectedimgdiv">
-                            <img class="selectedimg" :src="item.coverphoto" alt="">
+                        <div class="selectphotodiv" :style="{'background-image':'url(' + item.coverphoto + ')'}">
                         </div>
+                        <!--<div class="selectedimgdiv">
+                            <img class="selectedimg" :src="item.coverphoto" alt="">
+                        </div>-->
                         <p></p>
                         <h3 class="fs-5" style="height: 70px">{{item.productTitle}}</h3>
                         <div class="d-flex justify-content-between">
