--- a/Fundraising/wwwroot/CMS/login.html
+++ b/Fundraising/wwwroot/CMS/login.html
@@ -32,11 +32,11 @@
     </style>
 </head>
 
-<body class="bg-theme" id="app">
+<body class="bg-white" id="app">
     <div id="app">
         <div class="container text-center pt-5">
-            <img src="" alt="" style="height: 100px; width: 300px;">
-            <h1 class="mt-auto">後台管理系統</h1>
+            <img src="../img/brand.png" alt="" style="height: 100px; width: 300px;">
+            <h1 class="mt-auto pt-3">後台管理系統</h1>
             <div class="row justify-content-center ">
                 <div class="col-lg-6 bg-white  item-style" style="max-width: 430px;">
                     <div class="p-4">
